# multiElement

./: README.md  io.github.r_sergii.multiElement.json  meson.build  ua.inf.multiapps.multiElement.json
data/: io.github.r_sergii.multiElement.appdata.xml.in  io.github.r_sergii.multiElement.desktop.in  io.github.r_sergii.multiElement.gschema.xml  meson.build  ua.inf.multiapps.multiElement.appdata.xml.in  ua.inf.multiapps.multiElement.desktop.in  ua.inf.multiapps.multiElement.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  multielement.gresource.xml  window.ui  window.vala
src/resources/: define_color.vala
src/services/appsload/: appsload_model.vala  appsload_provider.vala  appsload_service.vala
src/services/connect/: connect_model.vala  connect_provider.vala  connect_service.vala
src/services/element/: element_model.vala  element_provider.vala  element_service.vala
src/services/properties/: properties_model.vala  properties_provider.vala  properties_service.vala
src/services/settings/: locale_model.vala  settings_model.vala  settings_service.vala  theme_model.vala
src/services/translate/: translate_model.vala  translate_provider.vala  translate_service.vala
src/utils/: color_operation.vala  http.vala  info_linux.c  info_linux.vala  info_theme.vala  text_trim.vala
src/views/: adomah_horiz_widget.vala  adomah_vert_widget.vala  circle_widget.vala  extended_widget.vala  piramid_widget.vala  short_widget.vala
src/widgets/circular-progress-bar/: circular-progress-bar.vala
src/widgets/items_widget/: items_widget.css  items_widget.vala
src/widgets/mode_switcher/: mode_switcher.ui  mode_switcher.vala
src/widgets/progress_widget/: progress_widget.vala
src/widgets/theme_switcher/: theme_switcher.css  theme_switcher.ui  theme_switcher.vala
src/windows/: settings.ui  settings.vala
src/windows/browser_window/: browser_window.ui  browser_window.vala
src/windows/language_window/: language_window.ui  language_window.vala
src/windows/main_window/: main_window.vala
src/windows/no_connect_window/: no_connect_window.vala
src/windows/splash_window/: splash_window.vala
